package pt.ipp.isep.dei.esoft.project.repository;

public class TeamRepository {
}
